<resources>
   <string-array name="w">
        <item>风</item>
        <item>霜</item>
        <item>雹</item>
        <item>雾</item>
        <item>雷</item>
        <item>雨夹雪</item>
        <item>雪</item>
        <item>雨</item>
        <item>阴</item>
        <item>云</item>
        <item>晴</item>
    </string-array>
    <string name="c_hint">输入中文地名</string>
    <string name="netbusy">the net is busy,try it later!</string>
    <string name="chinanet_failed">Get the weather fails, check the network ...</string>
    <string name="menu_acu">foreign net</string>
    <string name="menu_cen">china net</string>
    <string name="aboutt">about</string>
    <string name="failedget">get info failed!</string>
    <string name="menu_info">Current data, according to the source!</string>
    <string name="menu_acuu">Now: acuuweather data source!</string>
    <string name="menu_cent">Now: Central Meteorological Station data source!</string>
    <string name="china">China</string>
    <string name="nonet">No net</string>
    <string name="hongkong">Hongkong</string>
    <string name="beijing">Beijing</string>
    <string name="shanghai">Shanghai</string>
    <string name="tianjin">Tianjin</string>
    <string name="chongqing">Chongqing</string>
    <string name="akesu">Akesu</string>
    <string name="anning">Anning</string>
    <string name="anqing">Anqing</string>
    <string name="anshan">Anshan</string>
    <string name="anshun">Anshun</string>
    <string name="anyang">Anyang</string>
    <string name="baicheng">Baicheng</string>
    <string name="baishan">Baishan</string>
    <string name="baiyin">Baiyin</string>
    <string name="bengbu">Bengbu</string>
    <string name="baoding">Baoding</string>
    <string name="baoji">Baoji</string>
    <string name="baoshan">Baoshan</string>
    <string name="bazhong">Bazhong</string>
    <string name="beihai">Beihai</string>
    <string name="benxi">Benxi</string>
    <string name="binzhou">Binzhou</string>
    <string name="bole">Bole</string>
    <string name="bozhou">Bozhou</string>
    <string name="cangzhou">Cangzhou</string>
    <string name="changde">Changde</string>
    <string name="changji">Changji</string>
    <string name="changshu">Changshu</string>
    <string name="changzhou">Changzhou</string>
    <string name="chaohu">Chaohu</string>
    <string name="chaoyang">Chaoyang</string>
    <string name="chaozhou">Chaozhou</string>
    <string name="chengde">Chengde</string>
    <string name="chengdu">Chengdu</string>
    <string name="chenggu">Chenggu</string>
    <string name="chenzhou">Chenzhou</string>
    <string name="chibi">Chibi</string>
    <string name="chifeng">Chifeng</string>
    <string name="chishui">Chishui</string>
    <string name="chizhou">Chizhou</string>
    <string name="chongzuo">Chongzuo</string>
    <string name="chuxiong">Chuxiong</string>
    <string name="chuzhou">Chuzhou</string>
    <string name="cixi">Cixi</string>
    <string name="conghua">Conghua</string>
    <string name="dali">Dali</string>
    <string name="dalian">Dalian</string>
    <string name="dandong">Dandong</string>
    <string name="danyang">Danyang</string>
    <string name="daqing">Daqing</string>
    <string name="datong">Datong</string>
    <string name="dazhou">Dazhou</string>
    <string name="deyang">Deyang</string>
    <string name="dezhou">Dezhou</string>
    <string name="dongguan">Dongguan</string>
    <string name="dongyang">Dongyang</string>
    <string name="dongying">Dongying</string>
    <string name="douyun">Douyun</string>
    <string name="dunhua">Dunhua</string>
    <string name="eerduosi">Eerduosi</string>
    <string name="enshi">Enshi</string>
    <string name="fangchenggang">Fangchenggang</string>
    <string name="feicheng">Feicheng</string>
    <string name="fenghua">Fenghua</string>
    <string name="fushun">Fushun</string>
    <string name="fuxin">Fuxin</string>
    <string name="fuyang">Fuyang</string>
    <string name="fuyang1">Fuyang1</string>
    <string name="fuzhou">Fuzhou</string>
    <string name="fuzhou1">Fuzhou1</string>
    <string name="ganyu">Ganyu</string>
    <string name="ganzhou">Ganzhou</string>
    <string name="gaoming">Gaoming</string>
    <string name="gaoyou">Gaoyou</string>
    <string name="geermu">Geermu</string>
    <string name="gejiu">Gejiu</string>
    <string name="gongyi">Gongyi</string>
    <string name="guangan">Guangan</string>
    <string name="guangyuan">Guangyuan</string>
    <string name="guangzhou">Guangzhou</string>
    <string name="gubaotou">Gubaotou</string>
    <string name="guigang">Guigang</string>
    <string name="guilin">Guilin</string>
    <string name="guiyang">Guiyang</string>
    <string name="guyuan">Guyuan</string>
    <string name="haerbin">Haerbin</string>
    <string name="haicheng">Haicheng</string>
    <string name="haikou">Haikou</string>
    <string name="haimen">Haimen</string>
    <string name="haining">Haining</string>
    <string name="hami">Hami</string>
    <string name="handan">Handan</string>
    <string name="hangzhou">Hangzhou</string>
    <string name="hanzhong">Hanzhong</string>
    <string name="hebi">Hebi</string>
    <string name="hefei">Hefei</string>
    <string name="hengshui">Hengshui</string>
    <string name="hengyang">Hengyang</string>
    <string name="hetian">Hetian</string>
    <string name="heyuan">Heyuan</string>
    <string name="heze">Heze</string>
    <string name="huadou">Huadou</string>
    <string name="huaian">Huaian</string>
    <string name="huaibei">Huaibei</string>
    <string name="huaihua">Huaihua</string>
    <string name="huainan">Huainan</string>
    <string name="huanggang">Huanggang</string>
    <string name="huangshan">Huangshan</string>
    <string name="huangshi">Huangshi</string>
    <string name="huhehaote">Huhehaote</string>
    <string name="huizhou">Huizhou</string>
    <string name="huludao">Huludao</string>
    <string name="huzhou">Huzhou</string>
    <string name="jiamusi">Jiamusi</string>
    <string name="jian">Jian</string>
    <string name="jiangdou">Jiangdou</string>
    <string name="jiangmen">Jiangmen</string>
    <string name="jiangyin">Jiangyin</string>
    <string name="jiaonan">Jiaonan</string>
    <string name="jiaozhou">Jiaozhou</string>
    <string name="jiaozuo">Jiaozuo</string>
    <string name="jiashan">Jiashan</string>
    <string name="jiaxing">Jiaxing</string>
    <string name="jiexiu">Jiexiu</string>
    <string name="jilin">Jilin</string>
    <string name="jimo">Jimo</string>
    <string name="jinan">Jinan</string>
    <string name="jincheng">Jincheng</string>
    <string name="jingdezhen">Jingdezhen</string>
    <string name="jinghong">Jinghong</string>
    <string name="jingjiang">Jingjiang</string>
    <string name="jingmen">Jingmen</string>
    <string name="jingzhou">Jingzhou</string>
    <string name="jinhua">Jinhua</string>
    <string name="jining1">Jining1</string>
    <string name="jining">Jining</string>
    <string name="jinjiang">Jinjiang</string>
    <string name="jintan">Jintan</string>
    <string name="jinzhong">Jinzhong</string>
    <string name="jinzhou">Jinzhou</string>
    <string name="jishou">Jishou</string>
    <string name="jiujiang">Jiujiang</string>
    <string name="jiuquan">Jiuquan</string>
    <string name="jixi">Jixi</string>
    <string name="jiyuan">Jiyuan</string>
    <string name="jurong">Jurong</string>
    <string name="kaifeng">Kaifeng</string>
    <string name="kaili">Kaili</string>
    <string name="kaiping">Kaiping</string>
    <string name="kaiyuan">Kaiyuan</string>
    <string name="kashen">Kashen</string>
    <string name="kelamayi">Kelamayi</string>
    <string name="kuerle">Kuerle</string>
    <string name="kuitun">Kuitun</string>
    <string name="kunming">Kunming</string>
    <string name="kunshan">Kunshan</string>
    <string name="laibin">Laibin</string>
    <string name="laiwu">Laiwu</string>
    <string name="laixi">Laixi</string>
    <string name="laizhou">Laizhou</string>
    <string name="langfang">Langfang</string>
    <string name="lanzhou">Lanzhou</string>
    <string name="lasa">Lasa</string>
    <string name="leshan">Leshan</string>
    <string name="lianyungang">Lianyungang</string>
    <string name="liaocheng">Liaocheng</string>
    <string name="liaoyang">Liaoyang</string>
    <string name="liaoyuan">Liaoyuan</string>
    <string name="lijiang">Lijiang</string>
    <string name="linan">Linan</string>
    <string name="lincang">Lincang</string>
    <string name="linfen">Linfen</string>
    <string name="lingbao">Lingbao</string>
    <string name="linhe">Linhe</string>
    <string name="linxia">Linxia</string>
    <string name="linyi">Linyi</string>
    <string name="lishui">Lishui</string>
    <string name="liuan">Liuan</string>
    <string name="liupanshui">Liupanshui</string>
    <string name="liuzhou">Liuzhou</string>
    <string name="liyang">Liyang</string>
    <string name="longhai">Longhai</string>
    <string name="longyan">Longyan</string>
    <string name="loudi">Loudi</string>
    <string name="luohe">Luohe</string>
    <string name="luoyang">Luoyang</string>
    <string name="luxi">Luxi</string>
    <string name="luzhou">Luzhou</string>
    <string name="lvliang">Lvliang</string>
    <string name="lvshun">Lvshun</string>
    <string name="maanshan">Maanshan</string>
    <string name="maoming">Maoming</string>
    <string name="meihekou">Meihekou</string>
    <string name="meishan">Meishan</string>
    <string name="meizhou">Meizhou</string>
    <string name="mianxian">Mianxian</string>
    <string name="mianyang">Mianyang</string>
    <string name="mudanjiang">Mudanjiang</string>
    <string name="nanan">Nanan</string>
    <string name="nanchang">Nanchang</string>
    <string name="nanchong">Nanchong</string>
    <string name="nanjing">Nanjing</string>
    <string name="nanning">Nanning</string>
    <string name="nanping">Nanping</string>
    <string name="nantong">Nantong</string>
    <string name="nanyang">Nanyang</string>
    <string name="neijiang">Neijiang</string>
    <string name="ningbo">Ningbo</string>
    <string name="ningde">Ningde</string>
    <string name="panjin">Panjin</string>
    <string name="panzhihua">Panzhihua</string>
    <string name="penglai">Penglai</string>
    <string name="pingdingshan">Pingdingshan</string>
    <string name="pingdu">Pingdu</string>
    <string name="pinghu">Pinghu</string>
    <string name="pingliang">Pingliang</string>
    <string name="pingxiang">Pingxiang</string>
    <string name="pulandian">Pulandian</string>
    <string name="puning">Puning</string>
    <string name="putian">Putian</string>
    <string name="puyang">Puyang</string>
    <string name="qiannan">Qiannan</string>
    <string name="qidong">Qidong</string>
    <string name="qingdao">Qingdao</string>
    <string name="qingyang">Qingyang</string>
    <string name="qingyuan">Qingyuan</string>
    <string name="qingzhou">Qingzhou</string>
    <string name="qinhuangdao">Qinhuangdao</string>
    <string name="qinzhou">Qinzhou</string>
    <string name="qionghai">Qionghai</string>
    <string name="qiqihaer">Qiqihaer</string>
    <string name="quanzhou">Quanzhou</string>
    <string name="qujing">Qujing</string>
    <string name="h">H:</string>
    <string name="l">L:</string>
    <string name="cloud">Intermittent Cloud</string>
    <string name="demotime">Wed,Jun 24"</string>
    <string name="tt">16°</string>
    <string name="ht">26°</string>
    <string name="lt">15°</string>
    <string name="pre">"(("</string>
    <string name="next">"))"</string>
    <string name="select">Select</string>
    <string name="today">Today</string>
    <string name="week1">Mon</string>
    <string name="week2">Tue</string>
    <string name="week3">Wed</string>
    <string name="week4">Thu</string>
    <string name="temp">(1/3)</string>
    <string name="temperature">45</string>
    <string name="city"> GuangZhou </string>
    <string name="default_location_city">Shenzhen</string>
</resources>